--- a/.gitlab/ci/gitlab-ci.yml
+++ b/.gitlab/ci/gitlab-ci.yml
@@ -48,6 +48,7 @@ build:
       - build/lib/log4j.jar
       - build/lib/slf4j-api.jar
       - build/lib/slf4j-log4j12.jar
+      - build/lib/avro.jar
       - build/lib/wildfly-client-all.jar
     expire_in: 1 week
 
