--- a/ivy.xml
+++ b/ivy.xml
@@ -56,6 +56,8 @@
         <dependency org="net.sf.textile4j" name="textile4j" rev="1.2" conf="sources->sources" />
         <dependency org="net.sourceforge.nekohtml" name="nekohtml" rev="1.9.22" conf="sources->sources" />
         <dependency org="org.antlr" name="antlr4-runtime" rev="4.5.1" conf="sources->sources" />
+        <dependency org="org.apache.avro" name="avro" rev="1.11.1" conf="sources->sources" />
+        <dependency org="org.apache.avro" name="avro-tools" rev="1.11.1" conf="sources->sources" />
         <dependency org="org.apache.commons" name="commons-collections4" rev="4.4" conf="sources->sources" />
         <dependency org="org.apache.httpcomponents" name="fluent-hc" rev="4.5.13" conf="sources->sources" />
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.5.13" conf="sources->sources" />
@@ -89,7 +91,6 @@
         <dependency org="xerces" name="xercesImpl" rev="2.12.2" conf="sources->sources" />
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="sources->sources" />
 
-        <dependency org="org.apache.kafka" name="kafka-clients" rev="3.3.0" conf="javadoc->javadoc" />
         <dependency org="com.google.code.gson" name="gson" rev="2.9.0" conf="javadoc->javadoc" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.14.0" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="javadoc->javadoc" />
@@ -137,6 +138,8 @@
         <dependency org="net.sf.textile4j" name="textile4j" rev="1.2" conf="javadoc->javadoc" />
         <dependency org="net.sourceforge.nekohtml" name="nekohtml" rev="1.9.22" conf="javadoc->javadoc" />
         <dependency org="org.antlr" name="antlr4-runtime" rev="4.5.1" conf="javadoc->javadoc" />
+        <dependency org="org.apache.avro" name="avro" rev="1.11.1" conf="javadoc->javadoc" />
+        <dependency org="org.apache.avro" name="avro-tools" rev="1.11.1" conf="javadoc->javadoc" />
         <dependency org="org.apache.commons" name="commons-collections4" rev="4.4" conf="javadoc->javadoc" />
         <dependency org="org.apache.httpcomponents" name="fluent-hc" rev="4.5.13" conf="javadoc->javadoc" />
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.5.13" conf="javadoc->javadoc" />
@@ -222,6 +225,8 @@
         <dependency org="net.sf.textile4j" name="textile4j" rev="1.2" conf="binaries->default" />
         <dependency org="net.sourceforge.nekohtml" name="nekohtml" rev="1.9.22" conf="binaries->default" />
         <dependency org="org.antlr" name="antlr4-runtime" rev="4.5.1" conf="binaries->default" />
+        <dependency org="org.apache.avro" name="avro" rev="1.11.1" conf="binaries->default" />
+        <dependency org="org.apache.avro" name="avro-tools" rev="1.11.1" conf="binaries->default" />
         <dependency org="org.apache.commons" name="commons-collections4" rev="4.4" conf="binaries->default" />
         <dependency org="org.apache.httpcomponents" name="fluent-hc" rev="4.5.13" conf="binaries->default" />
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.5.13" conf="binaries->default" />
