--- a/.gitlab/ci/gitlab-ci.yml
+++ b/.gitlab/ci/gitlab-ci.yml
@@ -45,9 +45,9 @@ build:
       - build/lib/commons-beanutils.jar
       - build/lib/commons-logging.jar
       - build/lib/commons-collections.jar
-      - build/lib/log4j.jar
+      - build/lib/reload4j.jar
       - build/lib/slf4j-api.jar
-      - build/lib/slf4j-log4j12.jar
+      - build/lib/slf4j-reload4j.jar
       - build/lib/avro.jar
       - build/lib/wildfly-client-all.jar
     expire_in: 1 week
