--- a/ivy.xml
+++ b/ivy.xml
@@ -83,8 +83,8 @@
         <dependency org="org.jfree" name="jfreechart" rev="1.5.3" conf="sources->sources" />
         <dependency org="org.jooq" name="jooq" rev="3.17.4" conf="sources->sources" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="sources->sources" />
-        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="sources->sources" />
-        <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.32" conf="sources->sources" />
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.36" conf="sources->sources" />
+        <dependency org="org.slf4j" name="slf4j-reload4j" rev="1.7.36" conf="sources->sources" />
         <dependency org="org.threeten" name="threeten-extra" rev="1.5.0" conf="sources->sources" />
         <dependency org="org.wildfly" name="wildfly-client-all" rev="26.1.2.Final" conf="sources->sources" />
         <dependency org="xalan" name="xalan" rev="2.7.2" conf="sources->sources" />
@@ -165,8 +165,8 @@
         <dependency org="org.jfree" name="jfreechart" rev="1.5.3" conf="javadoc->javadoc" />
         <dependency org="org.jooq" name="jooq" rev="3.17.4" conf="javadoc->javadoc" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="javadoc->javadoc" />
-        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="javadoc->javadoc" />
-        <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.32" conf="javadoc->javadoc" />
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.36" conf="javadoc->javadoc" />
+        <dependency org="org.slf4j" name="slf4j-reload4j" rev="1.7.36" conf="javadoc->javadoc" />
         <dependency org="org.threeten" name="threeten-extra" rev="1.5.0" conf="javadoc->javadoc" />
         <dependency org="org.wildfly" name="wildfly-client-all" rev="26.1.2.Final" conf="javadoc->javadoc" />
         <dependency org="xalan" name="xalan" rev="2.7.2" conf="javadoc->javadoc" />
@@ -256,8 +256,8 @@
         <dependency org="org.jfree" name="jfreechart" rev="1.5.3" conf="binaries->default" />
         <dependency org="org.jooq" name="jooq" rev="3.17.4" conf="binaries->default" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="binaries->default" />
-        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="binaries->default" />
-        <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.32" conf="binaries->default" />
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.7.36" conf="binaries->default" />
+        <dependency org="org.slf4j" name="slf4j-reload4j" rev="1.7.36" conf="binaries->default" />
         <dependency org="org.threeten" name="threeten-extra" rev="1.5.0" conf="binaries->default" />
         <dependency org="org.wildfly" name="wildfly-client-all" rev="26.1.2.Final" conf="binaries->default" />
         <dependency org="xalan" name="xalan" rev="2.7.2" conf="binaries->default" />
