#694: Dealt with relocation of mysql-connector-java to mysql-connector-j

--- a/ivy.xml
+++ b/ivy.xml
@@ -49,7 +49,7 @@
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="sources->sources" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="sources->sources" />
         <dependency org="junit" name="junit" rev="4.12" conf="sources->sources" />
-        <dependency org="mysql" name="mysql-connector-java" rev="8.0.32" conf="sources->sources" />
+        <dependency org="com.mysql" name="mysql-connector-j" rev="8.0.32" conf="sources->sources" />
         <dependency org="net.sf.ezmorph" name="ezmorph" rev="1.0.6" conf="sources->sources" />
         <dependency org="net.sf.json-lib" name="json-lib" rev="2.4" conf="sources->sources" />
         <dependency org="net.sf.saxon" name="Saxon-HE" rev="10.2" conf="sources->sources" />
@@ -132,7 +132,7 @@
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="javadoc->javadoc" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="javadoc->javadoc" />
         <dependency org="junit" name="junit" rev="4.12" conf="javadoc->javadoc" />
-        <dependency org="mysql" name="mysql-connector-java" rev="8.0.32" conf="javadoc->javadoc" />
+        <dependency org="com.mysql" name="mysql-connector-j" rev="8.0.32" conf="javadoc->javadoc" />
         <dependency org="net.sf.ezmorph" name="ezmorph" rev="1.0.6" conf="javadoc->javadoc" />
         <dependency org="net.sf.json-lib" name="json-lib" rev="2.4" conf="javadoc->javadoc" />
         <dependency org="net.sf.saxon" name="Saxon-HE" rev="10.2" conf="javadoc->javadoc" />
@@ -218,7 +218,7 @@
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="binaries->default" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="binaries->default" />
         <dependency org="junit" name="junit" rev="4.12" conf="binaries->default" />
-        <dependency org="mysql" name="mysql-connector-java" rev="8.0.32" conf="binaries->default" />
+        <dependency org="com.mysql" name="mysql-connector-j" rev="8.0.32" conf="binaries->default" />
         <dependency org="net.sf.ezmorph" name="ezmorph" rev="1.0.6" conf="binaries->default" />
         <dependency org="net.sf.json-lib" name="json-lib" rev="2.4" conf="binaries->default">
             <artifact name="json-lib" e:classifier="jdk15" ext="jar"/>
