--- a/ui/cli/database/build.xml
+++ b/ui/cli/database/build.xml
@@ -38,7 +38,7 @@
         <property name="ui.cli.database.jarfile" value="${ui.cli.database.jardir}/database.jar" />
 
         <path id="runtime.classpath">
-            <file file="${build.lib.dir}/mysql-connector-java.jar"/>
+            <file file="${build.lib.dir}/mysql-connector-j.jar"/>
             <file file="${build.lib.dir}/guava.jar"/>
             <file file="${build.lib.dir}/commons-cli.jar"/>
             <file file="${build.lib.dir}/commons-lang.jar"/>
