--- a/ivy.xml
+++ b/ivy.xml
@@ -7,7 +7,7 @@
         <conf name="binaries" description="Binary jars"/>
     </configurations>
     <dependencies>
-        <dependency org="org.apache.kafka" name="kafka-clients" rev="3.3.0" conf="sources->sources" />
+        <dependency org="ch.qos.reload4j" name="reload4j" rev="1.2.25" conf="sources->sources" />
         <dependency org="com.google.code.gson" name="gson" rev="2.10.1" conf="sources->sources" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.14.0" conf="sources->sources" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="sources->sources" />
@@ -92,6 +92,7 @@
         <dependency org="xerces" name="xercesImpl" rev="2.12.2" conf="sources->sources" />
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="sources->sources" />
 
+        <dependency org="ch.qos.reload4j" name="reload4j" rev="1.2.25" conf="javadoc->javadoc" />
         <dependency org="com.google.code.gson" name="gson" rev="2.10.1" conf="javadoc->javadoc" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.14.0" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="javadoc->javadoc" />
@@ -175,6 +176,7 @@
         <dependency org="xerces" name="xercesImpl" rev="2.12.2" conf="javadoc->javadoc" />
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="javadoc->javadoc" />
 
+        <dependency org="ch.qos.reload4j" name="reload4j" rev="1.2.25" conf="binaries->default" />
         <dependency org="com.google.code.gson" name="gson" rev="2.10.1" conf="binaries->default" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.14.0" conf="binaries->default">
             <artifact name="error_prone_core" e:classifier="with-dependencies" ext="jar"/>
