#776: Converted non-parameterized Warehouse and Location page titles

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -894,6 +894,13 @@ pageTitle.leaveReasons=Leave Reasons
 pageTitle.leaveType=Review ({0})
 pageTitle.leaveTypeDescriptions=Leave Type Descriptions
 pageTitle.leaveTypes=Leave Types
+pageTitle.locations=Locations
+pageTitle.locationCapacities=Location Capacities
+pageTitle.locationDescriptions=Location Descriptions
+pageTitle.locationNameElementDescriptions=Name Element Descriptions
+pageTitle.locationNameElements=Name Elements
+pageTitle.locationTypes=Location Types
+pageTitle.locationTypeDescriptions=Location Type Descriptions
 pageTitle.mimeType=Review ({0})
 pageTitle.mimeTypeDescriptions=Mime Type Descriptions
 pageTitle.mimeTypes=Mime Types
@@ -961,6 +968,7 @@ pageTitle.vendorDocumentDescriptions=Vendor Document Descriptions
 pageTitle.vendorDocuments=Vendor Documents
 pageTitle.warehousePrinter=Review ({0})
 pageTitle.warehousePrinters=Warehouse Printers
+pageTitle.warehouses=Warehouses
 pageTitle.workEffort=Review ({0})
 pageTitle.workflow=Review ({0})
 pageTitle.workflows=Workflows
