#776: Converted parameterized Warehouse and Location page titles

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -894,11 +894,13 @@ pageTitle.leaveReasons=Leave Reasons
 pageTitle.leaveType=Review ({0})
 pageTitle.leaveTypeDescriptions=Leave Type Descriptions
 pageTitle.leaveTypes=Leave Types
+pageTitle.location=Review ({0})
 pageTitle.locations=Locations
 pageTitle.locationCapacities=Location Capacities
 pageTitle.locationDescriptions=Location Descriptions
 pageTitle.locationNameElementDescriptions=Name Element Descriptions
 pageTitle.locationNameElements=Name Elements
+pageTitle.locationType=Review ({0})
 pageTitle.locationTypes=Location Types
 pageTitle.locationTypeDescriptions=Location Type Descriptions
 pageTitle.mimeType=Review ({0})
@@ -966,7 +968,12 @@ pageTitle.services=Services
 pageTitle.vendorDocument=Review ({0})
 pageTitle.vendorDocumentDescriptions=Vendor Document Descriptions
 pageTitle.vendorDocuments=Vendor Documents
+pageTitle.warehouse=Review ({0})
+pageTitle.warehouseContactMechanism=Warehouse Contact Mechanism ({0})
+pageTitle.warehouseContactMechanisms=Warehouse Contact Mechanisms ({0})
 pageTitle.warehousePrinter=Review ({0})
+pageTitle.warehousePrinterGroupUses=Warehouse Printer Group Uses ({0})
+pageTitle.warehousePrinterGroupUse=Warehouse Printer Group Use ({0})
 pageTitle.warehousePrinters=Warehouse Printers
 pageTitle.warehouses=Warehouses
 pageTitle.workEffort=Review ({0})
