#777: Converted 'Locations' breadcrumb to use message resources (added resource changes)

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1183,6 +1183,7 @@ navigation.leaveReasonDescriptions=Descriptions
 navigation.leaveType=Review ({0})
 navigation.leaveTypes=Leave Types
 navigation.leaveTypeDescriptions=Descriptions
+navigation.locations=Locations
 navigation.mimeType=Review ({0})
 navigation.mimeTypes=Mime Types
 navigation.mimeTypeDescriptions=Descriptions
