#777: Converted 'Location Types' breadcrumb to use message resources

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1184,6 +1184,7 @@ navigation.leaveType=Review ({0})
 navigation.leaveTypes=Leave Types
 navigation.leaveTypeDescriptions=Descriptions
 navigation.locations=Locations
+navigation.locationTypes=Location Types
 navigation.mimeType=Review ({0})
 navigation.mimeTypes=Mime Types
 navigation.mimeTypeDescriptions=Descriptions
