#777: Converted 'Warehouse Contact Mechanisms' breadcrumb to use message resources

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1184,6 +1184,8 @@ navigation.leaveType=Review ({0})
 navigation.leaveTypes=Leave Types
 navigation.leaveTypeDescriptions=Descriptions
 navigation.locations=Locations
+navigation.locationCapacities=Capacities
+navigation.locationNameElements=Name Elements
 navigation.locationTypes=Location Types
 navigation.mimeType=Review ({0})
 navigation.mimeTypes=Mime Types
@@ -1271,6 +1273,7 @@ navigation.vendorDocuments=Documents
 navigation.vendorDocumentDescriptions=Descriptions
 navigation.warehousePrinterGroupUses=Printer Group Uses
 navigation.warehouses=Warehouses
+navigation.warehouseContactMechanisms=Contact Mechanisms
 navigation.wishlists=Wishlists
 navigation.workEffort=Review ({0})
 navigation.workflow=Review ({0})
