#777: Converted 'Warehouse Printer Group Uses' breadcrumb to use message resources

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1271,9 +1271,11 @@ navigation.vendorCarrierAccounts=Carrier Accounts
 navigation.vendorDocument=Review ({0})
 navigation.vendorDocuments=Documents
 navigation.vendorDocumentDescriptions=Descriptions
+navigation.warehouse=Review ({0})
+navigation.warehouseContactMechanism=Warehouse Contact Mechanism ({0})
+navigation.warehouseContactMechanisms=Contact Mechanisms
 navigation.warehousePrinterGroupUses=Printer Group Uses
 navigation.warehouses=Warehouses
-navigation.warehouseContactMechanisms=Contact Mechanisms
 navigation.wishlists=Wishlists
 navigation.workEffort=Review ({0})
 navigation.workflow=Review ({0})
