#777: Converted some labels on Warehouse and Location review pages to use message resources

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -729,6 +729,10 @@ label.totalTime=Total Time
 label.symbol=Symbol
 label.suppressSymbolSeparator=Suppress Symbol Separator
 label.symbolPosition=Symbol Position
+label.locationVolume=Location Volume
+label.locationCapacities=Location Capacities
+label.locationNameElements=Location Name Elements
+label.locations=Locations
 
 pageTitle.accounting=Accounting
 pageTitle.advertising=Advertising
