--- a/ivy.xml
+++ b/ivy.xml
@@ -71,7 +71,7 @@
         <dependency org="org.apache.lucene" name="lucene-core" rev="9.6.0" conf="sources->sources" />
         <dependency org="org.apache.lucene" name="lucene-queryparser" rev="9.6.0" conf="sources->sources" />
         <dependency org="org.apache.lucene" name="lucene-suggest" rev="9.6.0" conf="sources->sources" />
-        <dependency org="org.apache.poi" name="poi" rev="3.17" conf="sources->sources" />
+        <dependency org="org.apache.poi" name="poi" rev="3.2-FINAL" conf="sources->sources" />
         <dependency org="org.assertj" name="assertj-core" rev="3.23.1" conf="sources->sources" />
         <dependency org="org.assertj" name="assertj-guava" rev="3.5.0" conf="sources->sources" />
         <dependency org="org.freemarker" name="freemarker" rev="2.3.31" conf="sources->sources" />
@@ -155,7 +155,7 @@
         <dependency org="org.apache.lucene" name="lucene-core" rev="9.6.0" conf="javadoc->javadoc" />
         <dependency org="org.apache.lucene" name="lucene-queryparser" rev="9.6.0" conf="javadoc->javadoc" />
         <dependency org="org.apache.lucene" name="lucene-suggest" rev="9.6.0" conf="javadoc->javadoc" />
-        <dependency org="org.apache.poi" name="poi" rev="3.17" conf="javadoc->javadoc" />
+        <dependency org="org.apache.poi" name="poi" rev="3.2-FINAL" conf="javadoc->javadoc" />
         <dependency org="org.assertj" name="assertj-core" rev="3.23.1" conf="javadoc->javadoc" />
         <dependency org="org.assertj" name="assertj-guava" rev="3.5.0" conf="javadoc->javadoc" />
         <dependency org="org.freemarker" name="freemarker" rev="2.3.31" conf="javadoc->javadoc" />
@@ -244,7 +244,7 @@
         <dependency org="org.apache.lucene" name="lucene-core" rev="9.6.0" conf="binaries->default" />
         <dependency org="org.apache.lucene" name="lucene-queryparser" rev="9.6.0" conf="binaries->default" />
         <dependency org="org.apache.lucene" name="lucene-suggest" rev="9.6.0" conf="binaries->default" />
-        <dependency org="org.apache.poi" name="poi" rev="3.17" conf="binaries->default" />
+        <dependency org="org.apache.poi" name="poi" rev="3.2-FINAL" conf="binaries->default" />
         <dependency org="org.assertj" name="assertj-core" rev="3.23.1" conf="binaries->default" />
         <dependency org="org.assertj" name="assertj-guava" rev="3.5.0" conf="binaries->default" />
         <dependency org="org.freemarker" name="freemarker" rev="2.3.31" conf="binaries->default" />
