#782: Use navigation.companies whenever possible

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1038,6 +1038,8 @@ navigation.commandMessageTranslations=Translations
 navigation.commandMessageType=Review ({0})
 navigation.commandMessageTypes=Command Message Types
 navigation.commandMessageTypeDescriptions=Descriptions
+navigation.companies=Companies
+navigation.company=Review ({0})
 navigation.companyCarrierAccounts=Carrier Accounts
 navigation.companyDocument=Review ({0})
 navigation.companyDocuments=Documents
