--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -772,6 +772,8 @@ pageTitle.commandMessages=Command Messages
 pageTitle.commandMessageType=Review ({0})
 pageTitle.commandMessageTypeDescriptions=Command Message Type Descriptions
 pageTitle.commandMessageTypes=Command Message Types
+pageTitle.company=Review ({0})
+pageTitle.companies=Companies
 pageTitle.companyDocument=Review ({0})
 pageTitle.companyDocumentDescriptions=Company Document Descriptions
 pageTitle.companyDocuments=Company Documents
@@ -822,6 +824,10 @@ pageTitle.customerDocumentDescriptions=Customer Document Descriptions
 pageTitle.customerDocuments=Customer Documents
 pageTitle.customerTypeContactListGroups=Customer Type Contact List Groups
 pageTitle.customerTypeContactLists=Customer Type Contact Lists
+pageTitle.department=Review ({0})
+pageTitle.departments=Departments
+pageTitle.division=Review ({0})
+pageTitle.divisions=Divisions
 pageTitle.editor=Review ({0})
 pageTitle.editorDescriptions=Editor Descriptions
 pageTitle.editors=Editors
@@ -1096,6 +1102,10 @@ navigation.customers=Customers
 navigation.customerTypeContactListGroups=Customer Types
 navigation.customerTypeContactLists=Customer Types
 navigation.delete=Delete
+navigation.department=Review ({0})
+navigation.departments=Departments
+navigation.division=Review ({0})
+navigation.divisions=Divisions
 navigation.editor=Review ({0})
 navigation.editors=Editors
 navigation.editorDescriptions=Descriptions
