#783: Added additional pageTitle and navigation messages

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1002,6 +1002,20 @@ pageTitle.workflowStep=Review ({0})
 pageTitle.workflowSteps=Steps
 pageTitle.workflowStepDescriptions=Step Descriptions
 pageTitle.workRequirement=Review ({0})
+pageTitle.employee=Review ({0})
+pageTitle.employees=Employees
+pageTitle.trainingClass=Review ({0})
+pageTitle.trainingClasses=Training Classes
+pageTitle.responsibilityType=Review ({0})
+pageTitle.responsibilityTypes=Responsibility Types
+pageTitle.skillType=Review ({0})
+pageTitle.skillTypes=Skill Types
+pageTitle.terminationReason=Review ({0})
+pageTitle.terminationReasons=Termination Reasons
+pageTitle.terminationType=Review ({0})
+pageTitle.terminationTypes=Termination Types
+pageTitle.employeeType=Review ({0})
+pageTitle.employeeTypes=Employee Types
 
 navigation.about=About
 navigation.accounting=Accounting
@@ -1309,6 +1323,17 @@ navigation.workflowStep=Review ({0})
 navigation.workflowSteps=Steps
 navigation.workflowStepDescriptions=Descriptions
 navigation.workRequirement=Review ({0})
+navigation.employee=Review ({0})
+navigation.responsibilityType=Review ({0})
+navigation.responsibilityTypes=Responsibility Types
+navigation.skillType=Review ({0})
+navigation.skillTypes=Skill Types
+navigation.terminationReason=Review ({0})
+navigation.terminationReasons=Termination Reasons
+navigation.terminationType=Review ({0})
+navigation.terminationTypes=Termination Types
+navigation.employeeType=Review ({0})
+navigation.employeeTypes=Employee Types
 
 columnTitle.accessCount=Access Count
 columnTitle.account=Account
