#783: Use pageTitle.employees whenever possible

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -835,6 +835,7 @@ pageTitle.employee=Review ({0})
 pageTitle.employeeDocument=Review ({0})
 pageTitle.employeeDocumentDescriptions=Employee Document Descriptions
 pageTitle.employeeDocuments=Employee Documents
+pageTitle.employeeResults=Employee Results
 pageTitle.employeeType=Review ({0})
 pageTitle.employeeTypes=Employee Types
 pageTitle.employees=Employees
