#784: Added IsExtensible to EntityTypeDetails

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -300,6 +300,7 @@ label.inventorySerialized=Inventory Serialized
 label.isCommercial=Is Commercial
 label.isCorrect=Is Correct
 label.isDefault=Is Default
+label.isExtensible=Is Extensible
 label.isRequired=Is Required
 label.isRootSelectorNode=Is Root Selector Node
 label.iso2Letter=Iso 2 Letter
