#795: Added additional columns and appearances to Entity Types

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1485,6 +1485,7 @@ columnTitle.itemPriceType=Item Price Type
 columnTitle.itemSelector=Item Selector
 columnTitle.itemType=Item Type
 columnTitle.javaName=Java Name
+columnTitle.keepAllHistory=Keep All History
 columnTitle.keepPrintedJobsTime=Keep Printed Jobs Time
 columnTitle.key=Key
 columnTitle.kind=Kind
@@ -1500,6 +1501,7 @@ columnTitle.length=Length
 columnTitle.line=Line
 columnTitle.locationNameElement=Location Name Element
 columnTitle.lockoutPolicy=Lockout Policy
+columnTitle.lockTimeout=Lock Timeout
 columnTitle.login=Login
 columnTitle.mask=Mask
 columnTitle.maximum=Maximum
