#800: Added Track Revisions and Sort Order to Entity Attributes list

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1644,6 +1644,7 @@ columnTitle.timeZone=Time Zone
 columnTitle.toQuantity=To Quantity
 columnTitle.toType=To Type
 columnTitle.totalTime=Total Time
+columnTitle.trackRevisions=Track Revisions
 columnTitle.trainingClass=Training Class
 columnTitle.trainingClassAnswerName=Training Class Answer Name
 columnTitle.trainingClassPage=Training Class Page
