#801: Use Message Resources for Yes and No

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1704,7 +1704,9 @@ phrase.alreadyCustomer=Already a customer?
 phrase.login=Sign in here.
 phrase.logout=Logout.
 phrase.newCustomer=Are you a new customer?
+phrase.no=No
 phrase.notYou=Not you?
 phrase.register=Register here.
 phrase.welcome=Welcome back
+phrase.yes=Yes
 phrase.yourAccount=Your account.
