#801: Use Message Resources for 'Not Set.'

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1705,6 +1705,7 @@ phrase.login=Sign in here.
 phrase.logout=Logout.
 phrase.newCustomer=Are you a new customer?
 phrase.no=No
+phrase.notSet=Not Set
 phrase.notYou=Not you?
 phrase.register=Register here.
 phrase.welcome=Welcome back
