#801: Use Message Resources for 'Not Set' variations

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1706,6 +1706,9 @@ phrase.logout=Logout.
 phrase.newCustomer=Are you a new customer?
 phrase.no=No
 phrase.notSet=Not Set
+phrase.notSetManuallyMaintained=Not Set, Manually Maintained
+phrase.notSetUsingDefault=Not Set, Using Default
+phrase.notSetUsingItemDefault=Not Set, Using Item Default
 phrase.notYou=Not you?
 phrase.register=Register here.
 phrase.welcome=Welcome back
