#809: Added Warehouse Aliases

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -715,6 +715,7 @@ label.vendorStatusChoice=Vendor Status
 label.vendorType=Vendor Type
 label.vendorTypeName=Vendor Type Name
 label.warehouse=Warehouse
+label.warehouseAliasType=Warehouse Alias Type
 label.warehouseName=Warehouse Name
 label.webAddressStatusChoice=Web Address Status
 label.weight=Weight
@@ -1321,6 +1322,7 @@ navigation.warehouse=Review ({0})
 navigation.warehouseContactMechanism=Warehouse Contact Mechanism ({0})
 navigation.warehouseContactMechanisms=Contact Mechanisms
 navigation.warehousePrinterGroupUses=Printer Group Uses
+navigation.warehouseAliases=Warehouse Aliases
 navigation.warehouses=Warehouses
 navigation.wishlists=Wishlists
 navigation.workEffort=Review ({0})
