#821: Added additional information to the Party Alias Type review page

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -453,6 +453,7 @@ label.partyTrainingClassSessionQuestions=Questions
 label.partyTrainingClassSessionSequence=Sequence
 label.partyTrainingClassStatus=Party Training Class Status
 label.partyType=Party Type
+label.partyTypeName=Party Type Name
 label.partyTypeChoice=Party Type
 label.passingRequired=Passing Required
 label.password1=Password
