#815: Added UI for Vendor Aliases

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -709,6 +709,7 @@ label.validUntilTime=Valid Until Time
 label.validationPattern=Validation Pattern
 label.value=Value
 label.velocity=Velocity
+label.vendorAliasType=Vendor Alias Type
 label.vendorItemName=Vendor Item Name
 label.vendorItemStatusChoice=Vendor Item Status
 label.vendorName=Vendor Name
@@ -1315,10 +1316,13 @@ navigation.terminationTypes=Termination Types
 navigation.trainingClass=Training Class
 navigation.trainingClasses=Training Classes
 navigation.unitsOfMeasure=Units Of Measure
+navigation.vendor=Review ({0})
+navigation.vendorAliases=Vendor Aliases
 navigation.vendorCarrierAccounts=Carrier Accounts
 navigation.vendorDocument=Review ({0})
 navigation.vendorDocumentDescriptions=Descriptions
 navigation.vendorDocuments=Documents
+navigation.vendors=Vendors
 navigation.warehouse=Review ({0})
 navigation.warehouseContactMechanism=Warehouse Contact Mechanism ({0})
 navigation.warehouseContactMechanisms=Contact Mechanisms
