#816: Added Employee Aliases to UI

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -190,6 +190,7 @@ label.emailAddress=E-mail Address
 label.emailAddressContactMechanism=Email Address
 label.emailAddressStatusChoice=Email Address Status
 label.emailAddressVerificationChoice=Email Address Verification
+label.employeeAliasType=Employee Alias Type
 label.employeeAvailability=Employee Availability
 label.employeeName=Employee Name
 label.employeeStatus=Employee Status
@@ -1132,6 +1133,7 @@ navigation.editor=Review ({0})
 navigation.editorDescriptions=Descriptions
 navigation.editors=Editors
 navigation.employee=Review ({0})
+navigation.employeeAliases = Employee Aliases
 navigation.employeeApplicationEditorUses=Application Editor Uses
 navigation.employeeDocument=Review ({0})
 navigation.employeeDocumentDescriptions=Descriptions
