#833: Now using message resources on Accounting home page

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1116,6 +1116,7 @@ navigation.core=Core
 navigation.countries=Countries
 navigation.country=Review ({0})
 navigation.countryDescriptions=Descriptions
+navigation.currencies=Currencies
 navigation.customer=Review ({0})
 navigation.customerCarrierAccounts=Carrier Accounts
 navigation.customerDocument=Review ({0})
@@ -1177,6 +1178,10 @@ navigation.geoCodeType=Review ({0})
 navigation.geoCodeTypeDescriptions=Descriptions
 navigation.geoCodeTypes=Geo Code Types
 navigation.geoCodes=Geo Codes
+navigation.glAccountCategories=Gl Account Categories
+navigation.glAccountClasses=Gl Account Classes
+navigation.glResourceTypes=Gl Resource Types
+navigation.glAccounts=Gl Accounts
 navigation.harmonizedTariffScheduleCode=Review ({0})
 navigation.harmonizedTariffScheduleCodeTranslations=Translations
 navigation.harmonizedTariffScheduleCodeUnit=Review ({0})
@@ -1311,12 +1316,16 @@ navigation.skillType=Review ({0})
 navigation.skillTypes=Skill Types
 navigation.step=Step {0} of {1}
 navigation.subscriptions=Subscriptions
+navigation.taxes=Taxes
+navigation.terms=Terms
 navigation.terminationReason=Review ({0})
 navigation.terminationReasons=Termination Reasons
 navigation.terminationType=Review ({0})
 navigation.terminationTypes=Termination Types
 navigation.trainingClass=Training Class
 navigation.trainingClasses=Training Classes
+navigation.transactionGroups=Transaction Groups
+navigation.transactionTypes=Transaction Types
 navigation.unitsOfMeasure=Units Of Measure
 navigation.vendor=Review ({0})
 navigation.vendorAliases=Vendor Aliases
