#851: Added graphql-java.jar to graphql service to allow access to IntrospectionQuery.INTROSPECTION_QUERY

--- a/service/graphql/build.xml
+++ b/service/graphql/build.xml
@@ -96,6 +96,10 @@
                 <include name="guava.jar"/>
                 <include name="failureaccess.jar" />
             </lib>
+            <!-- GraphQL -->
+            <lib dir="${build.lib.dir}">
+                <include name="graphql-java.jar" />
+            </lib>
         </war>
     </target>
 
