#845: Added Warehouse Type when adding, editing, and listing Warehouses

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -720,6 +720,7 @@ label.vendorTypeName=Vendor Type Name
 label.warehouse=Warehouse
 label.warehouseAliasType=Warehouse Alias Type
 label.warehouseName=Warehouse Name
+label.warehouseType=Warehouse Type
 label.webAddressStatusChoice=Web Address Status
 label.weight=Weight
 label.width=Width
