--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -1341,6 +1341,8 @@ navigation.warehouseContactMechanisms=Contact Mechanisms
 navigation.warehousePrinterGroupUses=Printer Group Uses
 navigation.warehouseAliases=Warehouse Aliases
 navigation.warehouses=Warehouses
+navigation.warehouseType=Review ({0})
+navigation.warehouseTypes=Warehouse Types
 navigation.wishlists=Wishlists
 navigation.workEffort=Review ({0})
 navigation.workRequirement=Review ({0})
