--- a/src/build.xml
+++ b/src/build.xml
@@ -202,6 +202,11 @@
     <target name="compile" depends="generated">
         <path id="processorpath.ref">
             <pathelement location="${dir.build.lib}/error_prone_core-with-dependencies.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_annotation.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_type_annotations.jar"/>
+            <pathelement location="${dir.build.lib}/error_prone_check_api.jar"/>
+            <pathelement location="${dir.build.lib}/java-diff-utils.jar"/>
+            <pathelement location="${dir.build.lib}/dataflow-errorprone.jar"/>
             <pathelement location="${dir.build.lib}/failureaccess.jar"/>
             <pathelement location="${dir.build.lib}/jFormatString.jar"/>
             <pathelement location="${dir.build.lib}/threeten-extra.jar"/>
@@ -215,7 +220,7 @@
             classpath="${compile.task.classpath}"
             classpathref="shared.class.path"
             includes="${compile.task.include}" >
-            <compilerarg line="-XDcompilePolicy=simple"/>
+            <compilerarg value="-XDcompilePolicy=simple"/>
             <compilerarg value="-processorpath"/>
             <compilerarg pathref="processorpath.ref"/>
             <!-- Begin Error Prone -->
